# paceterminal-ai

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  fly.toml  main.py  pyproject.toml
app/: celery.py  main.py
app/api/: dependencies.py
app/api/routes/: analysis.py  chat.py  items.py
app/core/: config.py  database.py  prompts.py  tools.py
app/llm/: utils.py
app/llm/tools/: analysis.py
app/models/: token.py
app/schemas/: analysis.py  chat.py
app/services/: openai_service.py  token_service.py
app/tasks/: analysis_task.py
prisma/: schema.prisma
