[project]
name = "paceterminal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.118.0",
    "loguru>=0.7.3",
    "openai>=1.109.1",
    "openai-agents>=0.3.3",
    "prisma>=0.15.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.2",
    "slowapi>=0.1.9",
    "tavily-python>=0.7.12",
]
